--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&family=Open+Sans&family=Roboto+Slab:wght@700&display=swap"
     rel="stylesheet">
-  <title>Testing</title>
+  <title>MyLord</title>
 </head>
 
 <body>
